refactor: use carRequest
