# docs/swagger.json
@@ -41,7 +41,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/domain.Car"
+                            "$ref": "#/definitions/request.CarRequest"
                         }
                     }
                 ],
@@ -136,7 +136,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/domain.Car"
+                            "$ref": "#/definitions/request.CarRequest"
                         }
                     }
                 ],
@@ -298,23 +298,6 @@
         }
     },
     "definitions": {
-        "domain.Car": {
-            "type": "object",
-            "properties": {
-                "id": {
-                    "type": "integer"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "price": {
-                    "type": "number"
-                },
-                "type": {
-                    "type": "string"
-                }
-            }
-        },
         "domain.TestModel": {
             "type": "object",
             "required": [
@@ -328,6 +311,20 @@
                 "Number": {
                     "description": "cannot be default if required",
                     "type": "integer"
+                }
+            }
+        },
+        "request.CarRequest": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
+                },
+                "price": {
+                    "type": "number"
+                },
+                "type": {
+                    "type": "string"
                 }
             }
         }
